-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.6.0
-
Windows 10
-
17d530d60db270e3c011296a4f2ddc444a2acdff
QML Profiler doesn't work if the temporary file chosen by QtCreator for providing the QLocalServer to the application has spaces in it. Such file path cannot be properly represented as a part of the '-qmljsdebugger' command line option.
For Gerrit Dashboard: QTCREATORBUG-20260 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
226358,2 | Make sure to always quote the qmldebug command line arguments | 4.6 | qt-creator/pcore-plugin-appman | Status: MERGED | +2 | 0 |
226359,3 | Make sure we always quote the qmldebug command line arguments | 4.6 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
226361,2 | Make sure to always quote the qmldebug command line arguments | 4.6 | {graveyard}/qt-creator/tqtc-plugin-qmlpreview | Status: MERGED | +2 | 0 |
226407,2 | Make sure we always quote the qmldebug command line arguments | master | qt-creator/qt-creator | Status: ABANDONED | 0 | 0 |